<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:layout_marginTop="7dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/etTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="7dp"
        android:hint="@string/nombre_usuario"
        android:inputType="text" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:hint="@string/fecha"
            android:inputType="date" />

        <Button
            android:id="@+id/btnCalendario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Calendario"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrarTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="@string/registrar_tarea"
        android:textStyle="bold"
        android:textSize="15dp"/>

</LinearLayout>