<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/fondo_login"
        android:orientation="vertical"
        android:padding="40dp"
        android:weightSum="1">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.74" />

        <EditText
            android:id="@+id/txtNomUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:drawableLeft="@mipmap/account"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/nombre_usuario"
            android:inputType="textEmailAddress"
            android:paddingLeft="0dp"
            android:textColor="#FFF"
            android:textColorHint="#999" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@mipmap/lock"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="0dp"
            android:textColor="#FFF"
            android:textColorHint="#999" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/selector_xml_btn_yellow"
            android:text="@string/ingresar" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <TextView
            android:id="@+id/lbRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:text="@string/registrar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF"
            android:textStyle="bold" />

    </LinearLayout>


</FrameLayout>